[package]
name = "board"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Real-time transit departure board for OneBusAway, built with Slint"
default-run = "board"

[features]
default = ["windowed"]
windowed = ["slint/backend-winit"]
framebuffer = ["dep:slint-backend-linuxfb"]

[dependencies]
chrono = "0.4"
libc = "0.2"
image = "0.24.9"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = { version = "1.14.1", default-features = false, features = [
    "compat-1-2",
    "std",
    "renderer-software",
] }
slint-backend-linuxfb = { version = "0.1.1", optional = true }
tokio = { version = "1.49.0", features = ["full"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
